routing controller complete

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "sha/mvc",
     "autoload": {
         "psr-4": {
-            "Sha\\Mvc\\": "src/"
+            "App\\": "App/"
         }
     },
     "authors": [
