--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sh/mvc",
+    "name": "mdsha/sh-mvc",
     "autoload": {
         "psr-4": {
             "App\\": "App/"
@@ -7,11 +7,11 @@
     },
     "authors": [
         {
-            "name": "md-sharif-hosen",
+            "name": "sharif-hosen",
             "email": "mdsharifkhan762@gmail.com"
         }
     ],
     "require": {
-        "larapack/dd": "^1.1"
+        "larapack/dd": "1.*"
     }
 }
