--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "mdsha/sh-mvc",
     "autoload": {
         "psr-4": {
-            "App\\": "App/"
+            "App\\": "App/",
+            "database\\Seeders\\": "database/Seeders"
         }
     },
     "authors": [
@@ -12,6 +13,7 @@
         }
     ],
     "require": {
-        "larapack/dd": "1.*"
+        "larapack/dd": "1.*",
+        "doctrine/inflector": "^2.0"
     }
 }
